--- a/lib/wordmove/assets/import.php.erb
+++ b/lib/wordmove/assets/import.php.erb
@@ -62,9 +62,11 @@ $db_connection_charset = '<%= db[:charset] || 'utf8' %>';
 
 $filename           = '';     // Specify the dump filename to suppress the file selection dialog
 $ajax               = true;   // AJAX mode: import will be done without refreshing the website
-$linespersession    = 3000;   // Lines to be executed per one import session
+$linespersession    = 40000;   // Increase from 3000 to 40000
 $delaypersession    = 0;      // You can specify a sleep time in milliseconds after each session
                               // Works only if JavaScript is activated. Use to reduce server overrun
+$linespercommit    = 30000;   // Increase commit frequency
+$maxlinesize        = 10000000;   // Increase from default
 
 // CSV related settings (only if you use a CSV dump)
 
@@ -99,7 +101,7 @@ $string_quotes = '\'';                  // Change to '"' if your dump file uses 
 
 // How many lines may be considered to be one query (except text lines)
 
-$max_query_lines = 300;
+$max_query_lines = 10000;
 
 // Where to put the upload files into (default: bigdump folder)
 
